# linvoke

./: LICENSE  README.md  meson.build  meson.options
examples/: hello_world.c  multi_node_event.c  multi_port_multi_node_event.c  multi_slot_event.c  simple_event.c  simple_event_with_data.c  simple_event_with_data_override.c
include/: linvoke.h
source/: linvoke.c
test/: test.c
